自定义验证码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -110,3 +110,10 @@ spring.aop.proxy-target-class=true
 # CAS Authentication Credentials
 #
 cas.authn.accept.users=casuser::Mellon
+
+# 默认主题
+cas.theme.defaultThemeName=cas
+
+#开启识别json文件，默认false
+cas.serviceRegistry.initFromJson=true
+
