开启记住我

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -117,3 +117,6 @@ cas.theme.defaultThemeName=cas
 #开启识别json文件，默认false
 cas.serviceRegistry.initFromJson=true
 
+#记住我
+cas.ticket.tgt.rememberMe.enabled=true
+cas.ticket.tgt.rememberMe.timeToKillInSeconds=3600
